--- a/src/app/shared/components/Form/Field.module.css
+++ b/src/app/shared/components/Form/Field.module.css
@@ -12,12 +12,13 @@
   padding: 1.6rem;
   height: 30px;
   width: 100%;
-  transition: 0.2s;
+  transition: all 0.5s;
 }
 
 .inputGroup:hover,
 .inputGroup:focus-within {
   border-color: var(--element);
+  transition: all 0.5s;
 }
 
 .startIcon {
