SearchForm - update responsive behaviour

--- a/src/app/components/CountrySearch/CountrySearch.module.css
+++ b/src/app/components/CountrySearch/CountrySearch.module.css
@@ -1,6 +1,6 @@
 .form {
   display: flex;
-  max-width: 500px;
+  width: 100%;
 }
 
 .card {
@@ -30,4 +30,11 @@
 .input::placeholder {
   color: var(--text);
   opacity: 0.6;
+  transition: all 0.5s;
+}
+
+@media screen and (min-width: 992px) {
+  .form {
+    max-width: 500px;
+  }
 }
