add border radius to all components using card component

--- a/src/app/components/CountrySearch/CountrySearch.module.css
+++ b/src/app/components/CountrySearch/CountrySearch.module.css
@@ -4,12 +4,14 @@
 }
 
 .card {
+  border-radius: 5px;
   width: 100%;
 }
 
 .card > div {
   background-color: var(--element);
   border: 2px solid var(--element);
+  border-radius: 5px;
   transition: all 0.5s;
 }
 
