--- a/src/app/components/CountryItem/CountryItem.module.css
+++ b/src/app/components/CountryItem/CountryItem.module.css
@@ -5,8 +5,9 @@
   width: 100%;
 }
 
-.country > div {
+.country > .card {
   background-color: var(--element);
+  border-radius: 5px;
   min-height: 380px;
   width: 100%;
   transition: all 0.5s;
@@ -14,6 +15,8 @@
 
 .flag {
   border-bottom: 1px solid var(--background);
+  border-top-left-radius: inherit;
+  border-top-right-radius: inherit;
   width: 100%;
   height: 170px;
   object-fit: cover;
