--- a/src/index.css
+++ b/src/index.css
@@ -11,11 +11,28 @@
   --element: hsl(209, 23%, 22%);
 }
 
+html {
+  height: 100%;
+  width: 100%;
+}
+
 body {
   font-family: 'Nunito Sans', sans-serif;
   margin: 0;
   padding: 0;
   transition: all 0.5s;
+}
+
+a {
+  text-decoration: none;
+}
+
+li {
+  list-style: none;
+}
+
+button {
+  border: none;
 }
 
 button:focus:not(:focus-visible) {
