--- a/src/app/pages/CountryPage/CountryPage.module.css
+++ b/src/app/pages/CountryPage/CountryPage.module.css
@@ -97,12 +97,15 @@
   }
 
   .flagWrapper {
-    flex-grow: 2;
+    max-width: 50%;
+    width: 100%;
     margin-right: 1rem;
   }
 
   .detailWrapper {
-    flex-grow: 1;
+    max-width: 50%;
+    width: 100%;
+    flex-grow: 2;
   }
 
   .flag {
@@ -128,6 +131,6 @@
   }
 
   .borderListItem {
-    margin: 0 0.35rem;
+    margin: 0.5rem 0.35rem;
   }
 }
