--- a/src/app/components/CountryItem/CountryItem.module.css
+++ b/src/app/components/CountryItem/CountryItem.module.css
@@ -24,7 +24,7 @@
 }
 
 .content {
-  padding: 0 1rem;
+  padding: 0.5rem 1rem 0;
   color: var(--text);
   transition: all 0.5s;
 }
@@ -32,6 +32,7 @@
 .content > .countryName {
   font-size: 1.3rem;
   letter-spacing: 0.02rem;
+  margin-bottom: 1.5rem;
 }
 
 @media screen and (min-width: 992px) {
